# smart_financial_solutions

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  compose.yml  nginx.conf  smart_integrations_reports.json
Projeto Final - Artefatos/: Link_Apresentacao_Pitch.md
backend/: db.sqlite  pyproject.toml  requirements.txt
backend/src/: exception_handler.py  main.py  settings.py
backend/src/agents/: __init__.py  base_agent.py  data_analyst_agent.py  data_engineer.py  output_guard.py  report_gen_agent.py  supervisor_agent.py  tax_specialist_agent.py
backend/src/controllers/: agent_controller.py  db_controller.py  websocket_controller.py
backend/src/data/: __init__.py  embeddings.py  models.py  workflow_steps.py
backend/src/schemas/: __init__.py  model_schemas.py  status_schemas.py  user_schemas.py
backend/src/services/: __init__.py  chat_model.py  chat_model_services.py  data_processing.py  data_processing_services.py  db_services.py  vector_store_services.py
backend/src/tools/: data_analysis_tool.py  data_extraction_tool.py  python_tool.py  report_gen_tool.py  taxes_validation_tools.py  use_agent_tool.py  utils_tool.py
backend/src/utils/: exceptions.py
docs/: architecture.excalidraw
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  AppContent.tsx  index.css
frontend/src/components/: ChatPanel.tsx  UploadPanel.tsx
projeto_extracao/: Como rodar o sistema.docx  NF 518005127.xml  app_streamlit.py  auditoria_fiscal_20251028_135725.json  config.py  fiscal_db.db  instalacao.txt  main.py  requirements.txt  run_streamlit.py  setup.py  sistema_auditoria.py  sistema_fiscal.db  sistema_fiscal.py  sistema_gerencial.py
projeto_extracao/arquivos_teste/: NF 518005127.xml  NF.xlsx
(+41 files in other folders)
